<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qwe5" >

            

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="wrap_content"
                    android:layout_height="30px"
                    android:orientation="vertical" >
               

 </LinearLayout>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="32dp"
                    android:layout_toRightOf="@+id/LinearLayout02"
                    android:text="@string/t7" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/t6" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/t5" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0.28"
                    android:text="@string/t4" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/t3" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button5"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/t2" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button7"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/t1" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text1_1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            
</RelativeLayout>