<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qwe4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:buttonStyle="@style/HabraThemeButton" >

    <Button
        android:id="@+id/button4"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button6"
        android:text="@string/button4name" />

    <Button
        android:id="@+id/button2"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="27dp"
        android:text="@string/button2name" />

    <Button
        android:id="@+id/button3"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button2"
        android:layout_marginTop="105dp"
        android:text="@string/button3name" />

    <Button
        android:id="@+id/button1"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="27dp"
        android:text="@string/button1name" />

    <Button
        android:id="@+id/button6"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/druzi" />

    <Button
        android:id="@+id/button5"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button6"
        android:onClick="onclick"
        android:text="@string/hello" />

</RelativeLayout>